--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,15 @@
     <title>Document</title>
     <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello!</h1>
+    <h1>Угадай число от 1 до 10!</h1>
+    <form>
+        <input class="input" type="text" placeholder="Введите сюда число!">
+        <button class="button" type="submit">Угадать!</button>
+    </form>
     <p class="text"></p>
-    <script src = "script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
