--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Угадай число от 1 до 10!</h1>
-    <form>
-        <input class="input" type="text" placeholder="Введите сюда число!">
+    <form class="add" >
+        <input class="adding__input" type="text" placeholder="Введите сюда число!">
         <button class="button" type="submit">Угадать!</button>
     </form>
     <p class="text"></p>
